[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scene/Effect/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/text16Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/scene/npc/npc.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.4355
height = 6.56275

[sub_resource type="CircleShape2D" id=2]
radius = 53.1635

[node name="NPC" type="KinematicBody2D"]
z_index = 3
collision_layer = 2048
collision_mask = 4096
script = ExtResource( 3 )
alias_name = "listia"
item_buy = [ "flowernectar", "emptyvial", "smallpotion" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource( 1 )

[node name="Interact" parent="." instance=ExtResource( 1 )]
collision_layer = 2048
collision_mask = 2

[node name="CollisionShape2D" parent="Interact" index="0"]
shape = SubResource( 2 )

[node name="Check" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -29.5936
margin_top = -90.255
margin_right = 30.4064
margin_bottom = -68.255
custom_fonts/font = ExtResource( 2 )
text = "Maryd"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Interact" to="." method="_on_Interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_Interact_body_exited"]
[connection signal="timeout" from="Check" to="." method="_on_Check_timeout"]

[editable path="Interact"]
